# zygisk-set_setseccomp-skipper

./: build.gradle.kts  build.sh
module/: build.gradle.kts
module/src/main/cpp/: CMakeLists.txt  example.cpp
